--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "act_para_1_preentr",
+  "name": "proyecto_e_commerce",
   "version": "1.0.0",
   "main": "app.js",
   "type": "module",
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.21.0"
+    "express": "^4.21.0",
+    "express-handlebars": "^6.0.7"
   }
 }
